finish css for responsive

--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage": "https://matanna.github.io/MathieuBonhommeau_11_05042022/",
-  "name": "MathieuBonhommeau_11_05042022",
+  "name": "kasaa",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
